--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -6,3 +6,23 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: echo "hello testbash"
+  run-api-tests:
+    runs-on: ubuntu-latest
+    needs: my-pipeline
+    steps:
+      - uses: actions/checkout@v2
+      - name: run api test
+        working-directory: ./api-test
+        run: |
+          npm install
+          npm test
+  run-e2e-tests:
+    runs-on: ubuntu-latest
+    needs: my-pipeline
+    steps:
+      - uses: actions/checkout@v2
+      - name: run e2e tests
+        working-directory: ./e2e-test
+        run: |
+          npm install
+          npm test
