--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: run api test
-        working-directory: ./api-test
+        working-directory: src/api
         run: |
           npm install
           npm test
@@ -22,7 +22,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: run e2e tests
-        working-directory: ./e2e-test
+        working-directory: e2e
         run: |
           npm install
           npm test
