--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: run api test
-        working-directory: ./src/api
+        working-directory: ./src/webapp/api
         run: |
           npm install
           npm test
@@ -22,7 +22,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: start server
-        working-directory: e2e
+        working-directory: ./src/webapp
         run: |
           npm install
           npm run start-server
