--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -21,6 +21,9 @@ jobs:
     needs: my-pipeline
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-node@v3
+        with:
+          node-version: "18"
       - name: start server
         working-directory: ./src/webapp
         run: |
