--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -24,6 +24,8 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: "18"
+      - name: Install dependencies
+        run: yarn workspaces
       - name: start server
         working-directory: ./src/webapp
         run: |
